--- a/app/src/main/res/layout/item_online_video.xml
+++ b/app/src/main/res/layout/item_online_video.xml
@@ -5,7 +5,7 @@
     android:layout_marginTop="10dp"
     android:orientation="vertical">
 
-    <cn.jzvd.JZVideoPlayerStandard
+    <com.example.videoplayer.view.MyViedeoPlayer
         android:id="@+id/videoplayer"
         android:layout_width="match_parent"
         android:layout_height="200dp" />
