--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -5,12 +5,36 @@
     android:background="#eeeeee"
     android:orientation="vertical">
 
+
+    <com.zhuandian.view.CircleImageView
+        android:id="@+id/cir_header"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="80dp"
+        android:src="@drawable/ic_my" />
+
     <TextView
-        android:id="@+id/tv_history"
-        android:background="#fff"
+        android:id="@+id/tv_personal"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_marginTop="50dp"
+        android:background="#fff"
         android:gravity="center_vertical"
         android:paddingLeft="15dp"
-        android:text="fsdasdafsdafdsaf" />
+        android:text="个人信息" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#eeeeee" />
+
+    <TextView
+        android:id="@+id/tv_history"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="#fff"
+        android:gravity="center_vertical"
+        android:paddingLeft="15dp"
+        android:text="历史记录" />
 </LinearLayout>
