--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,6 +5,14 @@
     android:background="#fefefe"
     android:orientation="vertical">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="150dp"
+        android:text="欢迎进入使用"
+        android:textColor="@color/black"
+        android:textSize="22sp" />
 
     <RelativeLayout
         android:layout_width="match_parent"
